--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,24 @@
 .login-container{
     display: flex;
     flex-direction: column;
+    width: 50%;
+    margin: auto;
+    top: 25vh;
+    background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
 }
+
+.login-container mat-form-field{
+    width: 100%;
+}
+
+.login-container mat-card-title{
+    text-align: center;
+    font-family: Ubuntu;
+    font-weight: bold;
+    color: #4843ff;
+}
+
+.login-container mat-card-actions{
+    align-self: center;
+}
+
