--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,18 @@
-<div class="login-container">
-    <mat-form-field>
-        <input matInput placeholder="Email" [formControl] = "email" required>
-        <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
-    </mat-form-field>
-</div>
+
+<mat-card class="login-container">
+    <mat-card-title>Login</mat-card-title>
+    <mat-card-content>
+        <mat-form-field>
+            <input matInput type="email" placeholder="Email" [formControl] = "email" required>
+            <mat-error *ngIf="email.invalid">{{getErrorMessage('email')}}</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput type="password" placeholder="Password" [formControl]="password" required>
+            <mat-error *ngIf="password.invalid">{{getErrorMessage('password')}}</mat-error>
+        </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-raised-button class="mat-primary" (click)="doLogin()">Login</button>
+        <button mat-raised-button class="mat-accent">SignUp</button>
+    </mat-card-actions>
+</mat-card>
